add productCard.js for generating html

--- a/Sep-22/index.html
+++ b/Sep-22/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>JS in HTML</title>
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <link href="./styles.css" rel="stylesheet" type="text/css" />
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JS in HTML</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
+  </head>
 
-    <body>
-        <form>
-            <div class="container">
-                <!-- <div class="row">
+  <body>
+    <form>
+      <!-- <div class="container">
+ <div class="row">
                     <div class="col-md-3">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -28,23 +36,54 @@
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </div> -->
-                <div class="row">
-                    <div class="col-md-6">
-                        <div id="product" class="card" style="width: 18rem;">
-                            <img id="prodcutImage" src="..." class="card-img-top" alt="shoes">
-                            <div class="card-body">
-                                <h5 id="productID"class="card-title"></h5>
-                                <p id="productDesc"class="card-text"></p>
-                                <a id="purchase" href="#" class="btn btn-primary"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <!-- <div class="row">
+          <div class="col-md-6">
+            <div id="product" class="card" style="width: 18rem">
+              <img
+                id="prodcutImage"
+                src="..."
+                class="card-img-top"
+                alt="shoes"
+              />
+              <div class="card-body">
+                <h5 id="productID" class="card-title"></h5>
+                <p id="productDesc" class="card-text"></p>
+                <a id="purchase" href="#" class="btn btn-primary"></a>
+              </div>
             </div>
-        </form>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
-    </body>
+          </div>
+        </div>
+      </div> -->
 
+      <div
+        id="productsContainer"
+        class="row d-flex justify-content-between w-75 mx-auto my-3"
+      >
+        <template id="product" class="col-4 col-sm-12 mx-5">
+          <div class="card" style="width: 18rem">
+            <img class="cardImg" src="" alt="..." />
+            <div class="card-body">
+              <h5 class="cardTitle">Card title</h5>
+              <p class="cardDesc">Lorem ipsum dolor sit amet.</p>
+              <p class="cardPrice card-text font-weight-bold">Price</p>
+              <a
+                class="cardOrderBtn btn btn-primary"
+                href="#productsContainer"
+                title="Click to buy me a coffee"
+                >Go somewhere</a
+              >
+            </div>
+          </div>
+        </template>
+      </div>
+    </form>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <script src="./index.js"></script> -->
+    <script src="./productCards.js"></script>
+  </body>
 </html>
